objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_Id_Formula__c</fullName>
        <description>Account Id of the current user (if any)</description>
        <formula>Contact.AccountId</formula>
        <inlineHelpText>Account Id of the current user (if any)</inlineHelpText>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the Users list view in Setup to list System Administrator users.  This works regardless of the language the org is in.</description>
        <label>Admin User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <label>Coach</label>
        <relationshipName>Coach</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Enable_IDO_Internal_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used on page layouts to conditional show or hide internal IDO supports, and to provide a single trigger to hide all of them.</description>
        <inlineHelpText>This is used on page layouts to conditional show or hide internal IDO supports, and to provide a single trigger to hide all of them.</inlineHelpText>
        <label>Enable IDO Internal Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Service_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify users created to demonstrate Field Service Lighting.</description>
        <inlineHelpText>Used to identify users created to demonstrate Field Service Lighting.</inlineHelpText>
        <label>Field Service User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users who are often employed in demos.  Added to created &quot;Key Users&quot; list view.</description>
        <label>Key User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Omni_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Omni Supervisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Role__c</fullName>
        <description>Used in communities to personalize the experience based on primary role of the user.</description>
        <label>Primary Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Experience_ReputationPoints__c</fullName>
        <description>WHAT: Used in NextGen processes to map to Network Member reputation points. This is only used on deployment from CCI and does not map back from network member with reputation point updates. WHO: Jory Dean WHEN: April 2023</description>
        <label>Experience Reputation Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_Is_Q_Brix_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q Brix Admin User</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Read</sharingModel>
</CustomObject>